22-may-2009 - adelikat - win32 - Window caption shows the name of the ROM loaded
22-may-2009 - adelikat - win32 - Hex Editor - allowed the user to customize the color scheme by use of RGB values stored in the .cfg file
21-may-2009 - adelikat - win32 - reverted fixedFontHeight to 13 instead of 14.  Gave the option of adjusting the height by modifying RowHeightBorder in the .cfg file
21-may-2009 - adelikat - win32 - made fullscreen toggle (Alt+Enter) remappable
15-may-2009 - shinydoofy - sdl - added --subtitles
10-may-2009 - shinydoofy - sdl - fixed Four Score movie playback
02-may-2009 - adelikat - win32 - stop movie at frame x feature - fixed off by 1 error
23-apr-2009 - shinydoofy - sdl - added --ripsubs for converting fm2 movie subtitles to an srt file
15-apr-2009 - shinydoofy - sdl - Lua is optional again, fixed the real issue
14-apr-2009 - punkrockguy - sdl - LUA is NO longer optional, so the SConscripts have been updated to reflect that change.  This fixes the mysterious non-working input issue.
12-apr-2009 - shinydoofy - sdl - implemented saving/loading a savestate from a specific file on Alt+S/L
11-apr-2009 - shinydoofy - sdl - implemented starting an FM2 movie on Alt+R
11-apr-2009 - adelikat - made default save slot 0 instead of 1, Win32 - remember last slot used
11-apr-2009 - shinydoofy - sdl - added --pauseframe to pause movie playback on frame x
11-apr-2009 - shinydoofy - sdl - dropped UTFConverter.c from SDL build and added hotkey Q for toggling read-only/read+write movie playback

--version 2.1.0a released----
04-apr-2009 - shinydoofy - fixed fcm->fm2 code once again (this time for good, hopefully). Thanks to Bisqwit!
04-apr-2009 - shinydoofy - Reverted UTF8<->UTF32 code changes to fix up the win32 build for now

---version 2.1.0 released---
29-mar-2009 - adelikat - Win32 - reverted acmlm's /dll folder change
28-mar-2009 - shinydoofy - sdl - added hotkey Del to toggle mute avi capturing